@@ -1,5 +1,5 @@
 name    = Proch-N50
-author  = Andrea Telatin <andrea.telatin@quadram.ac.uk>
+author  = Andrea Telatin <andrea@telatin.com>
 license = MIT
 copyright_holder = Andrea Telatin
 copyright_year   = 2019
